--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "sass": "^1.49.11",
+    "sass-loader": "^12.6.0",
     "vue": "^3.2.25",
-    "vue-content-loader": "^2.0.1"
+    "vue-content-loader": "^2.0.1",
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
