--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@vueuse/core": "^8.2.4",
+    "lodash": "^4.17.21",
     "sass": "^1.49.11",
     "sass-loader": "^12.6.0",
     "vue": "^3.2.25",
     "vue-content-loader": "^2.0.1",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "xgplayer": "^2.31.6"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@vitejs/plugin-vue": "^2.3.0",
     "axios": "^0.26.1",
     "typescript": "^4.5.4",
