--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vueuse/core": "^8.2.4",
     "gsap": "^3.10.4",
     "lodash": "^4.17.21",
+    "mitt": "^3.0.0",
     "sass": "^1.49.11",
     "sass-loader": "^12.6.0",
     "vue": "^3.2.25",
