--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vueuse/core": "^8.2.4",
     "gsap": "^3.10.4",
     "lodash": "^4.17.21",
@@ -25,6 +26,7 @@
     "@vitejs/plugin-vue": "^2.3.0",
     "axios": "^0.26.1",
     "typescript": "^4.5.4",
+    "unplugin-auto-import": "^0.7.1",
     "vite": "^2.9.0",
     "vue-tsc": "^0.29.8"
   }
