--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/axios": "^0.14.0",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vueuse/core": "^8.2.4",
+    "@vueuse/head": "^0.7.6",
     "gsap": "^3.10.4",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
@@ -23,11 +24,13 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
+    "@types/node": "^17.0.27",
     "@vitejs/plugin-vue": "^2.3.0",
     "axios": "^0.26.1",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.7.1",
     "vite": "^2.9.0",
+    "vite-plugin-md": "^0.13.0",
     "vue-tsc": "^0.29.8"
   }
 }
