--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "unplugin-auto-import": "^0.7.1",
     "vite": "^2.9.0",
     "vite-plugin-md": "^0.13.0",
+    "vite-plugin-pwa": "^0.12.0",
     "vue-tsc": "^0.29.8"
   }
 }
