--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vueuse/core": "^8.2.4",
     "@vueuse/head": "^0.7.6",
+    "element-plus": "^2.1.11",
     "gsap": "^3.10.4",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
