--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gsap": "^3.10.4",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
+    "pinia": "^2.0.13",
     "sass": "^1.49.11",
     "sass-loader": "^12.6.0",
     "vue": "^3.2.25",
