--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vueuse/core": "^8.2.4",
     "@vueuse/head": "^0.7.6",
+    "animate.css": "^4.1.1",
+    "echarts": "^5.3.2",
     "element-plus": "^2.1.11",
     "gsap": "^3.10.4",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
+    "moment": "^2.29.3",
     "pinia": "^2.0.13",
     "sass": "^1.49.11",
     "sass-loader": "^12.6.0",
