--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.27",
     "@vitejs/plugin-vue": "^2.3.0",
+    "autoprefixer": "^10.4.7",
     "axios": "^0.26.1",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.7.1",
     "vite": "^2.9.0",
